<resources>
    <string name="app_name">Cad</string>
    <string name="down_message">单击屏幕指定文字位置</string>
    <string name="title_dialog">请输入文本内容</string>
    <string name="ok_dialog">确定</string>
    <string name="cancel_dialog">取消</string>

    <string-array name="tabs">
        <item>最近打开</item>
        <item>我的收藏</item>
        <item>全部文件</item>
    </string-array>

    <string-array name="shoptabs">
        <item>厨房组合</item>
        <item>床具组合</item>
        <item>儿童家具</item>
        <item>屏风隔断</item>
        <item>墙面墙饰</item>
    </string-array>

    <string name="recent_empty">最近没有打开文件</string>
    <string name="web_empty_no">登录查看云盘</string>
    <string name="web_empty_yes">云盘还没上传文件哦</string>

    <string name="my_title_no">当前还未登录</string>
    <string name="my_button_go">请前往登录</string>
    <string name="my_vip_no">您当前还不是VIP</string>
    <string name="my_vip_btn_no">前往开通</string>
    <string name="my_vip_btn_yes">续费</string>

    <string name="lg_username">请输入您的手机号</string>
    <string name="lg_code">请输入验证码</string>
    <string name="lg_password">请输入密码</string>
    <string name="lg_haCode">获取验证码</string>
    <string name="lg_btn">登录</string>


    <string-array name="my_list">
        <item>新手指南</item>
        <item>关于我们</item>
        <item>用户协议</item>
        <item>隐私政策</item>
    </string-array>


</resources>