<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog"
        android:textColor="#000000"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:letterSpacing="0.2"
        />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="输入你想输入的内容"
        android:layout_below="@id/textView"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:maxLength="15"
        android:singleLine="true"
        android:background="@drawable/input_shape"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edit"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok_dialog"
            android:layout_marginRight="10dp"
            android:background="@drawable/input_shape"
            android:backgroundTint="#f9f9f9"
            android:padding="5dp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel_dialog"
            android:layout_marginLeft="10dp"
            android:background="@drawable/input_shape"
            android:backgroundTint="#f9f9f9"
            android:padding="5dp"
            android:textColor="@android:color/holo_red_dark"
            />
    </LinearLayout>

</RelativeLayout>