<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@drawable/my_back_g"
        >
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_title_no"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:letterSpacing="0.2"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:id="@+id/vip_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/my_vip_no"
            android:textColor="@color/white"
            android:gravity="center"
            />

        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/my_vip_btn_no"
            android:stateListAnimator="@null"
            android:layout_below="@id/name"
            android:layout_toRightOf="@id/vip_time"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:padding="5dp"
            android:background="@drawable/shape_radiu_10"
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <View
        android:id="@+id/split"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        android:layout_marginTop="160dp"
        android:background="@drawable/shape_radiu_50"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
    </View>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/split"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        />




</RelativeLayout>